@@ -1,3 +1,11 @@
+2002-08-01  jacob berkman  <jacob@ximian.com>
+
+	* accessibility-keyboard.c (setup_accessX_dialog): fix widget name
+	for the keyboard capplet button
+
+	* gnome-accessibility-keyboard-properties.c (dialog_response):
+	don't quit when the import accessx button is clicked (#89358)
+
 2002-06-21  Satyajit Kanungo  <satyajit.kanungo@wipro.com>
 
 	* gnome-accessibility-keyboard-properties.c :
